# Algoritmia-y-estructura-de-datos-26-1

./: .gitignore  README.md
Ejemplo de la mochila/: CMakeLists.txt
Examen-1/Colas/FuncionesColas/: CMakeLists.txt  main.cpp
Examen-1/Colas/FuncionesColas/BibliotecaColas/: NodoCola.h
Examen-1/Colas/ex1_24_2/: CMakeLists.txt  main.cpp
Examen-1/Colas/ex1_25_1_2b/: CMakeLists.txt  main.cpp
Examen-1/Colas/ex1_25_2/: CMakeLists.txt  main.cpp
Lab 1/Ejemplo 1/: CMakeLists.txt  main.cpp
Lab 1/crucigrama/: main.cpp
Lab 1/lab25-1/: main.cpp
Lab 1/lab25-1_Preg2/: main.cpp
Lab-2/ex1_25_2_pregListas/: CMakeLists.txt  main.cpp
Lab-2/lab24_2_preg2/: CMakeLists.txt  main.cpp
Lab-2/lab25-2_preg1/: CMakeLists.txt  main.cpp
Lab-2/lab25_1_preg1/: CMakeLists.txt  main.cpp
Lab-2/lab25_2_preg2/: CMakeLists.txt  main.cpp
Lab-2/lab26_1_preg1/: CMakeLists.txt  main.cpp
Lab-2/lab3_25_1_preg2/: CMakeLists.txt  main.cpp
Lab-2/listasEjercicio/: CMakeLists.txt  main.cpp
Lab-2/listasFunciones/: CMakeLists.txt
Lab-3/Pilas/ejercicio_submarino/PilasFunciones/: CMakeLists.txt
Lab-3/ejercicio_submarino/: main.cpp
Lab-4/Divide and Conquer/: clasificacion_picos.md  examen_practica_final.md
Lab-4/Divide and Conquer/ejercicios/: CMakeLists.txt  ContarCeros.cpp  ContarCeros.h  ContarInversiones.cpp  ContarInversiones.h  FuncionesDivideConquer.cpp  MaxSubArray.h  main.cpp
Lab-4/Trees/FuncionesABB/: CMakeLists.txt  main.cpp
Lab-4/Trees/FuncionesABB/BibliotecaArbolBinarioBusqueda/: ElementoArbolBinarioBusqueda.h  FuncionesArbolBinarioBusqueda.cpp  FuncionesArbolBinarioBusqueda.h
Lab-4/Trees/FuncionesArboles/: CMakeLists.txt  main.cpp
Lab-4/Trees/FuncionesArboles/BibliotecaArbolBinario/: ElementoArbolBinario.h  FuncionesArbolBinario.cpp  NodoArbolBinario.h
Lab-4/dataLossPrevention/: CMakeLists.txt
Lab-4/ejercicios/: CMakeLists.txt  ContarCeros.cpp  FuncionesDivideConquer.cpp  FuncionesDivideConquer.h  MaxSubArray.cpp  main.cpp
Lab-4/inAndOutDataCenter/: main.cpp
Lab-4/matrizMinerales/: CMakeLists.txt
Lab-4/oppenheimer_lab3_24_1/: CMakeLists.txt  main.cpp
Lab-4/teoria/: FuncionesDivideAndConquer.cpp  FuncionesDivideAndConquer.h  main.cpp
crucigrama/: CMakeLists.txt
ex2/: active_recall_arboles.md  active_recall_divide_and_conquer.md
ex2/abb/abb_iterativo_practicar/: CMakeLists.txt  main.cpp
ex2/abb/abb_iterativo_practicar/BibliotecaColas/: ElementoCola.h  NodoCola.h
ex2/abb/abb_iterativo_practicar/BibliotecaPilas/: funcionesPila.h
ex2/colas/: APUNTE_cola_prioridad.md
lab25-1/: CMakeLists.txt
(+223 files in other folders)
